# NumericalAlgebra

./: .gitignore  LICENSE  README.md
Final/code/: CMakeLists.txt  README.md  cli.cpp  equation.cpp  main.cpp  util.cpp  uzawa.cpp  v_cycle.cpp
Final/code/cpp/: CMakeLists.txt  cli.cpp  equation.cpp  util.cpp  v_cycle.cpp
Final/code/cpp/include/: uzawa.h  v_cycle.h
Final/code/include/: cli.h  equation.h  util.h  uzawa.h  v_cycle.h
Final/code/python/: baseline.py  kernel.py  main.py
Final/code/python/backend/: equation.py
Final/code/python/backend/jax/: equation.py  v_cycle.py
Final/code/python/backend/pytorch/: equation.py  v_cycle.py
Final/doc/: neurips_2022.sty  report.tex
Final/python/: kernel.py  main.py
Final/python/backend/: __init__.py  equation.py
Final/python/backend/jax/: equation.py  v_cycle.py
Final/python/backend/pytorch/: equation.py  v_cycle.py
HW1/: problem1.py  problem2.py  report.md  shared.py
HW1/code/: problem1.py  problem2.py  shared.py
HW1/doc/: report.md
HW2/code/: problem1.py  problem2.py  shared.py
HW2/doc/: report.md
HW3/code/: matrix.npz  problem1.py  problem2.py  problem3.py  shared.py  vector.npz
HW3/doc/: report.md
HW4/code/: .gitignore  CMakeLists.txt  main.cpp  main.py  plot.py
HW4/doc/: report.md
HW5/code/: CMakeLists.txt  README.md  conjugate_gradient.cpp  conjugate_gradient.h  gauss_seidel.cpp  gauss_seidel.h  ldl.cpp  ldl.h  main.cpp  multi_grid.cpp  multi_grid.h  util.cpp  util.h
HW5/doc/: report.md
HW6/code/: implicit_QR.py  power_method.py
HW6/doc/: report.md
